# glimmer

./: .gitignore  pyrightconfig.json
.github/: copilot-instructions.md
.github/instructions/: backend_orchestration_instructions.md  connectors_instructions.md  data_and_retrieval_instructions.md  frontend_workspace_instructions.md  (+2 more)
src/apps/backend/: .env.example  pyproject.toml
src/apps/backend/alembic/: env.py
src/apps/backend/alembic/versions/: 04f18b84875c_add_source_layer_entities.py  108da1e7fbcb_baseline_empty.py  1c7c7d6aa26a_add_research_and_expert_advice_tables.py  33f1e1085a52_add_portfolio_entities.py  a3f9b2e71c04_add_focus_pack_narrative_summary.py  b04bfdd8469d_add_remaining_domain_entities.py  cfb2c8fc249b_add_primary_operator_entity.py  e12a0c4f7b91_add_persona_page_session_tables.py  e14a0b3c9d52_add_mindmap_working_state_table.py  e15a0d4e8f63_add_paste_in_source_artifact_table.py  f45e9c073be9_add_stakeholder_entities.py
src/apps/backend/app/: __init__.py  __main__.py  config.py  db.py  main.py
src/apps/backend/app/api/: __init__.py  ask.py  connectors.py  drafts.py  health.py  operator.py  persona.py  projects.py  research.py  telegram.py  triage.py  voice.py
src/apps/backend/app/connectors/: __init__.py  base.py  context.py  contracts.py  intake.py  oauth_providers.py  sync.py  token_manager.py
src/apps/backend/app/connectors/google/: __init__.py  calendar.py  gmail.py
src/apps/backend/app/connectors/manual/: __init__.py  importer.py
src/apps/backend/app/connectors/microsoft/: __init__.py  calendar.py  mail.py
src/apps/backend/app/connectors/telegram/: __init__.py  intake.py
src/apps/backend/app/graphs/: __init__.py  drafting.py  intake.py  planner.py  refresh.py  research.py  state.py  triage.py  voice_session.py
src/apps/backend/app/inference/: __init__.py  base.py  config.py  context_builder.py  openai_compat.py  orchestration.py  response_parser.py
src/apps/backend/app/inference/prompts/: __init__.py  briefing.py  classification.py  contextual_ask.py  conversation.py  drafting.py  extraction.py  paste_in_extraction.py  prioritization.py
src/apps/backend/app/inference/tasks/: __init__.py  briefing.py  classification.py  contextual_ask.py  conversation.py  drafting.py  extraction.py  paste_in_extraction.py  prioritization.py
src/apps/backend/app/models/: __init__.py  audit.py  channel.py  drafting.py  execution.py  interpretation.py  operator.py  persona.py  portfolio.py  research.py  source.py  stakeholder.py  summary.py
src/apps/backend/app/research/: __init__.py  _browser_helpers.py  adapter.py  browser.py  chrome_monitor.py  config.py  contracts.py  gemini_chat.py  gemini_research.py
src/apps/backend/app/services/: briefing.py  handoff.py  sync_orchestration.py  telegram.py  telegram_notifier.py  triage_pipeline.py  voice.py
src/apps/backend/scripts/: seed_demo_data.py
(+224 files in other folders)
