[project]
name = "glimmer-backend"
version = "0.1.0"
description = "Glimmer — local-first AI project chief-of-staff backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135,<1",
    "uvicorn[standard]>=0.44,<1",
    "pydantic>=2.12,<3",
    "pydantic-settings>=2.13,<3",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.18,<2",
    "psycopg[binary]>=3.3,<4",
    "python-dotenv>=1.2,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9,<10",
    "pytest-asyncio>=1,<2",
    "httpx>=0.28,<1",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["../../tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

