[project]
name = "glimmer-backend"
version = "0.1.0"
description = "Glimmer — local-first AI project chief-of-staff backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135,<1",
    "uvicorn[standard]>=0.44,<1",
    "pydantic>=2.12,<3",
    "pydantic-settings>=2.13,<3",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.18,<2",
    "psycopg[binary]>=3.3,<4",
    "python-dotenv>=1.2,<2",
    "langgraph>=1.1,<2",
    "langchain-core>=1.2,<2",
    "playwright>=1.52,<2",
    "openai>=1.70,<2",
    "google-auth-oauthlib>=1.2,<2",
    "google-api-python-client>=2.100,<3",
    "msal>=1.28,<2",
    "cryptography>=42,<44",
    "httpx>=0.28,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9,<10",
    "pytest-asyncio>=1,<2",
    "httpx>=0.28,<1",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["../../tests"]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "smoke: Smoke pack — baseline startup and reachability proof",
    "workstream_a: Workstream A — Foundation verification",
    "workstream_b: Workstream B — Domain and Memory verification",
    "workstream_c: Workstream C — Connectors verification",
    "workstream_d: Workstream D — Triage and Prioritization verification",
    "workstream_e: Workstream E — Drafting and UI verification",
    "workstream_f: Workstream F — Voice and Companion verification",
    "workstream_h: Workstream H — Deep Research and Expert Advice verification",
    "workstream_i: Workstream I — LLM Integration Layer verification",
    "data_integrity: Data-integrity regression — cross-cutting memory spine protection",
    "release: Release pack — representative cross-system confidence",
    "manual_only: Manual-only scenario — requires human verification",
    "deferred: Deferred scenario — automation not yet practical",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

